# SoftSec-Project-SecTrans

./: .gitignore  CMakeLists.txt  Makefile  README.md  SecTrans  Users.txt  actions.h  auth.c  auth.h  bool_type.h  client.c  client.h  constants.h  main.c  messages.c  messages.h  server.c  server.h
Decompiler/: libclient.c
aes/: aes_256_cbc.c  aes_256_cbc.h  aes_manager.c  aes_manager.h
auth/: auth.c  auth.h
base64/: base64constant.h  base64decode.c  base64decode.h  base64encode.c  base64encode.h
bibli_decompile/: libclient.c  libserver.c
client_message_management/: client_message_management.c  client_message_management.h
file_management/: file_management.c  file_management.h  file_management_server.c  file_management_server.h
file_management/io/: io_client.c  io_client.h
files_to_get/: test.txt  test_chinese.txt  test_long.txt
libs/client_libs/: messages.c  messages.h
libs/logger/: logger_sha.c  logger_sha.h
load_libraries/: load_libraries_client.c  load_libraries_client.h  load_libraries_server.c  load_libraries_server.h
message_management/: common_message_management.c  common_message_management.h
message_management/client_message_management/: client_message_management.c  client_message_management.h
message_management/client_message_management/client_cryptomessage_management/: client_cryptomessage_management.c  client_cryptomessage_management.h
message_management/server_message_management/: server_message_management.c  server_message_management.h
message_management/server_message_management/server_cryptomessage_management/: server_cryptomessage_management.c  server_cryptomessage_management.h
message_management/server_message_management/server_crytpomessage_management/: server_cryptomessage_management.c
rsa/: rsa.c  rsa.h  rsa_manager.c  rsa_manager.h
server_message_management/: server_message_management.c  server_message_management.h
time_management/: time_management.c  time_management.h
utils/: array_utils.c  array_utils.h  bool_type.h
